2012-02-19 18:58-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Version
	* GormInfo.plist
	* GormCore/GormFilePrefsManager.m: Update version information.

2012-02-15 17:59-EST Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormPrivate.m: Remove poseAs: override. Fix for
	compilation with ObjC2.0 compilers.
	* Palettes/3Containers/GormNSTableColumnInspector.gorm:
	Correction for tableView column identifiers.   Delegate
	wasn't connected.

2012-02-06 02:02-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Version: 1.2.16
	* GormInfo.plist
	* Documentation/news.texi: Update version and documentation.

2012-02-06 02:02-EST Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormClassInspector.m
	* GormCore/GormCustomClassInspector.h
	* GormCore/GormFilesOwner.m
	* GormCore/GormOutlineView.m

2012-01-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* English.lproj/GormClassInspector.gorm: Re-save with the
	last change, so the outlet/action table data cells are
	editable.

2012-01-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Palettes/3Containers/GormTableColumnAttributesInspector.m:
	Set editable state of the data cell to match editable state
	of the column. (NSTableView now refuses to edit non-editable
	data cells in editable columns.)

2012-01-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Palettes/3Containers/GormTabViewAttributesInspector.m:
	Add retain/release so tab view item isn't deallocated while
	being moved from one position to another.

2011-11-28 Gregory John Casamento <greg.casamento@gmail.com>

	* Palettes/0Menus/GormMenuAttributesInspector.m
	* Palettes/0Menus/GormMenuInspectors.m: Correction for
	bug #33457, title change should now cause document
	to be modified.

2011-10-29 Gregory John Casamento <greg.casamento@gmail.com>

	* Plugins/Xib/GormXibWrapperLoader.m
	* Plugins/Nib/GormNibWrapperLoader.m: Include GormWindowTemplate
	from GormCore instead of locally.
	* Plugins/Nib/GormWindowTemplate.h